plugins {
    id 'dev.architectury.loom' version '1.13-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
    id 'maven-publish'
    id 'java'

    id "norivensuu.iinpulib"
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
    }

    configurations {
        shadowOnly
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()

        implementation "org.reflections:reflections:$rootProject.reflections_version"
        implementation "io.github.classgraph:classgraph:$rootProject.classgraph_version"

        implementation "net.bytebuddy:byte-buddy:$rootProject.bytebuddy_version"
        implementation "net.bytebuddy:byte-buddy-agent:$rootProject.bytebuddy_version"
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    afterEvaluate {
        tasks.matching { it.name.toLowerCase().contains("run") }.configureEach {
            doFirst {
                def agentJar = project(":iinpulib-agent").tasks.jar.archiveFile.get().asFile.absolutePath

                jvmArgs += "-javaagent:${agentJar}"
                jvmArgs += '-XX:+EnableDynamicAgentLoading'
            }
        }
    }

    jar {
        manifest {
            attributes(
                    "Premain-Class": "norivensuu.iinpulib.Iinpulib",
                    "Agent-Class": "norivensuu.iinpulib.Iinpulib",
                    "Can-Redefine-Classes": "true",
                    "Can-Retransform-Classes": "true"
            )
        }
    }
}